--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,62 @@
 version: "3"
 services:
-  correction:
-    build: .
+  zookeeper:
+    image: confluentinc/cp-zookeeper:5.5.1
+    hostname: zookeeper
     environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+
+  kafka:
+    image: confluentinc/cp-kafka:5.5.1
+    ports:
+      - 9092:9092
+    hostname: kafka
+    depends_on:
+      - zookeeper
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
+      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
+      - KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS=0
+      - KAFKA_JMX_PORT=9101
+
+  kafkahq:
+    image: tchiotludo/kafkahq
+    ports:
+      - 8080:8080
+    environment:
+      KAFKAHQ_CONFIGURATION: |
+        kafkahq:
+          connections:
+            docker-kafka:
+              properties:
+                bootstrap.servers: "kafka:9092"
+    depends_on:
+      - kafka
+
+  simulator_producer:
+    build: producer
+    environment:
+      - DIRECTORY_PATH=/app/data/
       - PRODUCER_TOPIC=vera-rubin-simulator
-      - PRODUCER_SERVER=${PRODUCER_SERVER}
+      - PRODUCER_SERVER=kafka:9092
+    depends_on:
+      - kafka
+#    stdin_open: true
+#    tty: true
+#    command: /bin/bash
+
+  simulator_consumer:
+    build: consumer
+    environment:
+      - CONSUMER_TOPICS=vera-rubin-simulator
+      - CONSUMER_SERVER=kafka:9092
+      - CONSUMER_GROUP_ID=simulator_consumer
+    depends_on:
+      - kafka
+      - simulator_producer
