--- a/producer/Dockerfile
+++ b/producer/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install -r /app/requirements.txt
 WORKDIR /app
 COPY . /app
 
-# RUN mkdir data
-# RUN curl --fail "https://lsst.ncsa.illinois.edu/~ebellm/sample_precursor_alerts/latest_single_ccd_sample.avro" > data/rubin_single_ccd_sample.avro
+RUN mkdir data
+RUN curl --fail "https://lsst.ncsa.illinois.edu/~ebellm/sample_precursor_alerts/latest_single_ccd_sample.avro" > data/rubin_single_ccd_sample.avro
 
 CMD ["python", "scripts/run_step.py"]
